<resources>
    <string name="app_name">好吃懒做</string>
    <string name="progress_on">正在加载</string>
    <string name="default_city">济南</string>
    <string name="list_empty">列表为空</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="tips">确认删除该商品吗？</string>
    <string name="error">很抱歉，程序遭遇异常，即将退出！</string>
    <string name="success">操作成功</string>
    <string name="server_error">服务器错误，请稍后重试</string>
    <string name="operation_failed">操作失败</string>
    <string name="new_version">发现新版本，是否更新?</string>
    <string name="ignore">忽略</string>
    <string name="install">安装</string>
    <string name="server_version_num">版本:%s</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="cart_empty">购物车为空</string>
    <string name="product_empty">商品为空</string>
    <string name="kitchen_empty">暂无厨房</string>
    <string name="coupon_empty">暂无可用优惠券</string>
    <string name="location_empty">暂无历史记录</string>
    <string name="addresses_empty">暂无地址信息</string>
    <string name="staff_empty">暂无员工信息</string>
    <string name="order_empty">暂无订单信息</string>
    <string name="staff_name">姓名</string>
    <string name="video_file_name_format" translatable="false">"'VID'_yyyyMMdd_HHmmss"</string>
    <string name="kitchen">社区厨房</string>
    <string name="mall">好吃懒做</string>
    <string name="order">订单</string>
    <string name="me">我的</string>
    <string name="me_chengdai">我的(城市代理)</string>
    <string name="dshop_permlink">网上商城</string>
    <string name="recentlyused">推荐使用</string>
    <string name="juli">%.2fkm</string>
    <string name="nearby">附近厨房</string>
    <string name="eat_inkitchen">社区厨房</string>
    <string name="eat_gohome">海外精品</string>
    <string name="make_order">下单</string>
    <string name="confirm_order">确认订单</string>
    <string name="select_pay_method">选择支付方式</string>
    <string name="product_price">￥%.2f</string>
    <string name="product_like">%d人喜欢</string>
    <string name="product_num">剩余%d份</string>
    <string name="select_product">请选择商品</string>
    <string name="location_fail">获取定位信息失败</string>
    <string name="network_location_fail">服务端网络定位失败</string>
    <string name="network_location_error">网络不同导致定位失败，请检查网络是否通畅</string>
    <string name="location_error">无法获取有效定位依据导致定位失败，一般是由于手机的原因，处于飞行模式下一般会造成这种结果，可以试着重启手机</string>
    <string name="search_hint">点击此处输入内容，选择街区</string>
    <string name="search_title_default">历史位置</string>
    <string name="search_title">搜索结果</string>
    <string name="search_now">当前位置</string>
    <string name="no_result">未找到结果</string>
    <string name="get_now_location">定位当前位置</string>
    <string name="product_detail">产品详情</string>
    <string name="total">总计</string>
    <string name="total_price">%s</string>
    <string name="total_price2">共%1$s件商品 合计:¥%2$s</string>
    <string name="yunfei">(含运费:%s)</string>
    <string name="coupon_price">优惠%s元</string>
    <string name="coupon_price_default">优惠0元</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="coupon_alread_user">该优惠券已经使用，不能重复使用</string>
    <string name="actual_pay">实际付款</string>
    <string name="delivery_method">配送方式</string>
    <string name="tangshi">堂食</string>
    <string name="ziqu">自取</string>
    <string name="peisong">配送    如需打包盒请与卖家联系</string>
    <string name="order_ok">提交订单</string>
    <string name="select_address">请选择地址</string>
    <string name="order_commit_success">订单提交成功</string>
    <string name="product_num_empty">货物库存不足</string>
    <string name="alread_collect">已收藏</string>
    <string name="no_collect">未收藏</string>
    <string name="product_desc">商品详情</string>
    <string name="pingjia">评价(18)</string>
    <string name="order_num">订单编号：</string>
    <string name="order_time">下单时间：</string>
    <string name="order_price">订单金额：</string>
    <string name="pay_method_txt">支付方式</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechat">微信支付</string>
    <string name="xianxia">线下支付</string>
    <string name="pay_success">用户支付成功</string>
    <string name="pay_cancle">用户取消支付</string>
    <string name="pay_fail">支付失败, 原因: %1$s,%1$s</string>
    <string name="order_status_unknown">订单状态未知</string>
    <string name="pay_other_error">invalid return</string>
    <string name="start_pay">启动第三方支付，请稍候...</string>
    <string name="search">搜索</string>
    <string name="image_content">个人头像</string>
    <string name="my_phone">手机号:%s</string>
    <string name="my_coupon_num">%s个</string>
    <string name="my_coupon">我的奖券</string>
    <string name="get_coupon">领取奖券</string>
    <string name="to_get_coupon">去领奖券</string>
    <string name="my_jifen">我的积分</string>
    <string name="my_shoucang">我的收藏</string>
    <string name="my_address">我的地址</string>
    <string name="my_staff">我的员工</string>
    <string name="my_haohanbang">好汉榜</string>
    <string name="bangding">绑定第三方账户</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="edit">修改</string>
    <string name="alread_bangding">已绑定</string>
    <string name="no_bangding">未绑定</string>
    <string name="no_open">暂未开通</string>
    <string name="user_info">个人信息</string>
    <string name="head_image">头像</string>
    <string name="nicheng">昵称</string>
    <string name="new_nicheng">请输入昵称</string>
    <string name="edit_nicheng">修改昵称</string>
    <string name="jifen">当前积分</string>
    <string name="jifen_num">%d分</string>
    <string name="jifen_desc">积分说明</string>
    <string name="jifen_duihuan">积分兑换</string>
    <string name="add_address">新增地址</string>
    <string name="add_staff">新增员工</string>
    <string name="info_staff">员工信息</string>
    <string name="edit_address">修改地址</string>
    <string name="contact_person">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="address">收货地址</string>
    <string name="zhiwei">职位</string>
    <string name="select_street">选择街区</string>
    <string name="input_address_hint">输入街道小区/单元/门牌号等</string>
    <string name="set_default">设为默认</string>
    <string name="no_login">登录/注册</string>
    <string name="no_login_desc">您尚未登录，请登录后查看个人信息</string>
    <string name="introducer">修改推荐人</string>
    <string name="login">登录</string>
    <string name="login_error">用户不存在</string>
    <string name="phone_num">手机号</string>
    <string name="login_pwd">登录密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="pass_error">密码错误</string>
    <string name="new_pwd_format">密码长度6-20字符</string>
    <string name="wancheng">完成</string>
    <string name="zhuce">注册</string>
    <string name="exit">退出登录</string>
    <string name="verifycode">验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="request_too_frequently">请求过于频繁</string>
    <string name="next">下一步</string>
    <string name="verifycode_success">验证码已发送</string>
    <string name="verifycode_not_correct">验证码不正确，请重新输入</string>
    <string name="phone_empty">请输入手机号码</string>
    <string name="phone_validate_fail">手机号验证失败</string>
    <string name="verifycode_empty">请输入验证码</string>
    <string name="tuijianren_real">请填写正确的推荐人手机号或者推荐码</string>
    <string name="reverifycode">重新验证</string>
    <string name="remaining_time">%d秒</string>
    <string name="setting">设置</string>
    <string name="change_pwd">修改密码</string>
    <string name="check_update">检测更新</string>
    <string name="clear_huancun">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_content">请输入反馈意见</string>
    <string name="order_status">订单状态：</string>
    <string name="logistics_detail">物流详情</string>
    <string name="delivery_address">送货地址：%s</string>
    <string name="goto_pay">去支付</string>
    <string name="offline_pay">线下支付</string>
    <string name="deliverying">配送中</string>
    <string name="appraise">评价</string>
    <string name="yiwancheng">已完成</string>
    <string name="confirm_goods">确认收货</string>
    <string name="confirm_goods_success">收货成功</string>
    <string name="order_id_expire_error">订单号已经过期，请重新申请新的订单号来提交订单</string>
    <string name="inventory_lack_error">库存不够，请重新编辑购物车后再提交订单</string>
    <string name="bind_code_error">绑定号码不存在,请重新输入!</string>
    <string name="phone_invalid">联系电话验证失败</string>
    <string name="no_order">没有订单</string>
    <string name="no_order_desc">您还没有登录，请登录后查看订单</string>
    <string name="contact_staff_name_empty">请输入员工姓名</string>
    <string name="contact_user_empty">请输入联系人</string>
    <string name="contact_phone_empty">请输入联系电话</string>
    <string name="address_empty">请输入收货地址</string>
    <string name="address_error">街区信息有误</string>
    <string name="feedback_success">感谢您的反馈！</string>
    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>