<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_pwd"
            style="@style/commonstyle_black_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:background="@color/white"
            android:text="@string/jifen" />

        <TextView
            android:id="@+id/tv_jifen"
            style="@style/commonstyle_red_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/jifen_num" />

        <TextView
            style="@style/commonstyle_red_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/jifen_desc" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/btn_yellow"
        android:text="@string/jifen_duihuan" />

</LinearLayout>
